Integrating `TypingAndInferenceErrors` into the new type system